[metadata]
name = bl-imp
version = attr: blimp.__version__
url = https://github.com/mightyBroccoli/blacklist_importer
licence = GPLv3
author = Nico Wellpott
author_email = nico@magicbroccoli.de
description = simple tool to download and update the JabberSpam blacklist list.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    appdirs>=1.4
    requests>=2.25
    ruamel.yaml>=0.17
    ruamel.yaml.clib>=0.2
    urllib3>=1.26
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bl-imp = blimp.cli:cli

[tool:pytest]
testpaths = tests
filterwarnings =
    error
